tdf#93868: PPTX import: Incorrect inheritance of shape fill properties

DrawingML: The useBgFill attribute specifies that the shape fill
should be set to that of the slide background.

Change-Id: I8b568e730f00326d51e7b604579f4ff990b26f8a